--- a/packages/atoms/base-python/dev-python/installer/build.yaml
+++ b/packages/atoms/base-python/dev-python/installer/build.yaml
@@ -26,6 +26,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: trove-classifiers
+- name: calver
   version: '>=0'
   category: dev-python
