--- a/packages/atoms/base-python/dev-python/tomli/build.yaml
+++ b/packages/atoms/base-python/dev-python/tomli/build.yaml
@@ -26,6 +26,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: installer
+- name: trove-classifiers
   version: '>=0'
   category: dev-python
